# rave

./: .gitignore  CNAME  Cargo.toml  README.md  build-web.sh  index.html  package-lock.json
buildroot/: Config.in  external.desc
buildroot/board/rave/: linux.fragment  post-build.sh
buildroot/board/rave/patches/linux/: linux.hash
buildroot/configs/: rave_defconfig
demo/: fw_jump.NOTICE  fw_jump.defconfig  rave.dtb  rave.dts
demo/linux/: README.md  rootfs.cpio
scripts/: build-linux.sh
src/: bus.rs  cpu.rs  debugger.rs  lib.rs  machine.rs  main.rs  tui.rs  wasm.rs
tests/: freestanding_guest.rs
tests/fixtures/: boot_link.ld  boot_payload.c  boot_shim.c  clint.c  guest.c  link.ld  msip.c  mtrap.c  plic.c  plic_repeat.c  privileged.c  rv64a.c  rv64c.c  rv64m.c  strap.c  sv39.c  uart.c  zicsr.c
web/: app.js  style.css  worker.js
web/pkg/: README.md  package.json  rave.d.ts  rave.js  rave_bg.wasm  rave_bg.wasm.d.ts
