[package]
name = "rave"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rave"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
fdt = "0.1.5"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
